--- a/subgraphs/exchange/subgraph.yaml
+++ b/subgraphs/exchange/subgraph.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
-description: PancakeSwap is a decentralized protocol for automated token exchange on Binance Smart Chain.
-repository: https://github.com/pancakeswap
+description: Wagyuswap is a decentralized protocol for automated token exchange on Velas.
+repository: https://github.com/wagyuswapapp
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,9 +8,9 @@ dataSources:
     name: Factory
     network: bsc
     source:
-      address: '0xcA143Ce32Fe78f1f7019d7d551a6402fC5350c73'
+      address: "0x63394F65ebC5e96e70081C584cFA0a506A04dcCe"
       abi: Factory
-      startBlock: 6809737
+      startBlock: 1045172
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
