--- a/subgraphs/blocks/subgraph.yaml
+++ b/subgraphs/blocks/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: BSCValidatorSet
-    network: bsc
+    network: velas
     source:
       address: '0x0000000000000000000000000000000000001000'
       abi: BSCValidatorSet
