--- a/subgraphs/blocks/subgraph.yaml
+++ b/subgraphs/blocks/subgraph.yaml
@@ -8,8 +8,9 @@ dataSources:
     name: BSCValidatorSet
     network: velas
     source:
-      address: '0x0000000000000000000000000000000000001000'
+      address: "0x0000000000000000000000000000000000001000"
       abi: BSCValidatorSet
+      startBlock: 720212
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
