--- a/subgraphs/exchange/subgraph.yaml
+++ b/subgraphs/exchange/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: Factory
     network: velas
     source:
-      address: "0x524dB42469a1Eb12E7f2b3fEefD9A1f880fC7A4C"
+      address: "0x62552f5040228ec1a46a4a6c7f03c4c8caf6b9d9"
       abi: Factory
-      startBlock: 1166356
+      startBlock: 141569
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
