--- a/subgraphs/WagyuRegistry/package.json
+++ b/subgraphs/WagyuRegistry/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.24.0",
-    "@graphprotocol/graph-ts": "0.24.0"
+    "@graphprotocol/graph-ts": "0.24.0",
+    "node-fetch": "^3.1.0"
   }
 }
