--- a/subgraphs/lottery/subgraph.yaml
+++ b/subgraphs/lottery/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Lottery
-    network: bsc
+    network: velas
     source:
-      address: '0x5aF6D33DE2ccEC94efb1bDF8f92Bd58085432d2c'
+      address: "0xCc98EA77643713A1bBe42C468e3D8263E635ed29"
       abi: Lottery
-      startBlock: 8796011
+      startBlock: 9507886
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
